    projection. This was added in PR#61.

  * CLI option printout width was increased to 150 characters to improve display on large monitors. This was
    added by PR#91.

  * Various build improvements were added by PR#68 and PR#66.

  * Added option to pileup transformations to set whether reads that are not at their primary alignment positions
    should be converted into pileups. By default, we only convert reads at a primary mapping location. This
    is does not introduce incompatible changes to the API, but changes the APIs functionality. This change was
    introduced in PR#125 which came out of issue #121.

  BUG FIXES

  * Fixed issues where VCF header was not being written correctly. This prevented variant calls from being
    written after conversion. This was fixed in PR#85.

  * Fixed a possible issue where pileup generation may have been ignoring reference ID when grouping pileups
    into rods. This was in PR#86. This necessitated changing the ADAMRod model which was introduced in PR#36;
    however, this is not an API breaking change as ADAMRod did not show up in a previous release.

  * Fixed code which performed Hadoop 1 incompatible HDFS access. This was fixed in PR#76.

  * Added Y as a valid base inside of the MdTag utility. The omission of this base caused BAM file import to
    fail for some datasets. This was addressed in PR#56. This change was propegated more widely across the
    API by PR#48.

  * ISSUE 103: Added a call to clearProperty('spark.driver.port') in the cleanup from a sparkTest, so that 
    we correctly clean up the test Spark workers and avoid errors about attempting to bind to a port that's
	already in use.

  BREAKING CHANGES

  * ADAMFasta was changed to ADAMNucleotideContig, and internal field types and names were changed in PR #79.

  * When optimizing phred --> double calculation, several public methods in the PhredUtils were renamed to clarify
    their operations.